--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-# Python Virtual Environment
+# 1. Ignore the Virtual Environment (wherever it is)
 .venv/
 venv/
 ENV/
 
-# Python Cache (Compiled files)
+# 2. Ignore Python Compiled Files (Recursively)
 __pycache__/
 *.py[cod]
+*$py.class
 
-# SUMO Generated Detector Files
+# 3. Ignore Generated SUMO/Simulation Files
 e*.xml
 *.sumo.trj
+*.sumo.cfg
+sumo_capture.png
+debug_screenshots/
 
-# Other common system files to ignore
+# 4. OS System Files
 .DS_Store
 Thumbs.db
